registration page added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<div class="container mt-5">  <!-- mt means margin top -->
+    <mat-grid-list cols="2" rowHeight="2:1" gutterSize="20">
+        <mat-grid-tile >
+            <div>
+                <h1>hello</h1>
+                <div>
+                    <h2>india</h2>
+                </div>
+                <div style="cursor: pointer;">
+                    <button routerLink="/register">Click</button>
+
+                </div>
+            </div>
+
+
+        </mat-grid-tile>
+        <mat-grid-tile>2</mat-grid-tile>
+        <mat-grid-tile>3</mat-grid-tile>
+        <mat-grid-tile>4</mat-grid-tile>
+    </mat-grid-list>
+</div>
