--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,3 +1,8 @@
 .mat-mdc-radio-button ~ .mat-mdc-radio-button {
     margin-left: 16px;
   }
+
+  mat-form-field{
+    width: 100%;
+    /* display: flex; */
+  }
