--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,11 @@
 <div class="container">
-  <div class="card p-4 mt-3">
+
+  <!-- for all studentlist -->
+  <div align="right" class="mt-1">
+    <button mat-raised-button color="accent" routerLink="/studentList">StudentList</button>
+  </div>
+
+  <div class="card p-3 mt-1">
 
     <form #regForm="ngForm" (ngSubmit)="savestudent(regForm)">
       <!-- student name -->
@@ -7,7 +13,6 @@
         <mat-label>Name</mat-label>
         <input matInput placeholder="Enter Name" name="stuentName" [(ngModel)]="student.stuentName">
         <mat-icon matSuffix>person</mat-icon>
-
       </mat-form-field>
 
       <!-- hallticket number -->
@@ -23,7 +28,6 @@
         <mat-label>College Name</mat-label>
         <input matInput placeholder="Enter College Name" name="collegeName" [(ngModel)]="student.collegeName">
         <mat-icon matSuffix>school</mat-icon>
-
       </mat-form-field>
 
       <!-- selecting state (  drop down)-->
@@ -40,8 +44,10 @@
       <div>
         <label for="">Gender</label>
         <mat-radio-group aria-label="Select an option">
-          <mat-radio-button value="Male" (click)="slectGender('Male')"[checked]="checkGender('Male')">Male</mat-radio-button>
-          <mat-radio-button value="FeMale" (click)="slectGender('FeMale')"[checked]="checkGender('FeMale')">FeMale</mat-radio-button>
+          <mat-radio-button value="Male" (click)="slectGender('Male')"
+            [checked]="checkGender('Male')">Male</mat-radio-button>
+          <mat-radio-button value="FeMale" (click)="slectGender('FeMale')"
+            [checked]="checkGender('FeMale')">FeMale</mat-radio-button>
         </mat-radio-group>
       </div>
 
@@ -49,9 +55,12 @@
       <div>
         <label for="" class="mt-3">Skills</label>
         <section class="example-section mb-3">
-          <mat-checkbox class="example-margin" value="AngularJs" (change)="selectskill($event)" [checked]="checkSkill('AngularJs')">AngularJs</mat-checkbox>
-          <mat-checkbox class="example-margin" value="Java" (change)="selectskill($event)"[checked]="checkSkill('Java')">Java</mat-checkbox>
-          <mat-checkbox class="example-margin" value="ReactJs" (change)="selectskill($event)"[checked]="checkSkill('ReactJs')">ReactJs</mat-checkbox>
+          <mat-checkbox class="example-margin" value="AngularJs" (change)="selectskill($event)"
+            [checked]="checkSkill('AngularJs')">AngularJs</mat-checkbox>
+          <mat-checkbox class="example-margin" value="Java" (change)="selectskill($event)"
+            [checked]="checkSkill('Java')">Java</mat-checkbox>
+          <mat-checkbox class="example-margin" value="ReactJs" (change)="selectskill($event)"
+            [checked]="checkSkill('ReactJs')">ReactJs</mat-checkbox>
         </section>
       </div>
       <mat-divider></mat-divider>
