--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
                 <div>
                     <h2>india</h2>
                 </div>
-                <div style="cursor: pointer;">
+                <!-- <div style="cursor: pointer;"> this cursor pointer means it show hand symbol when hover -->
                     <button routerLink="/register">Click</button>
 
                 </div>
