--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
                 <!-- <div style="cursor: pointer;"> this cursor pointer means it show hand symbol when hover -->
                     <button routerLink="/register">Click</button>
 
-                </div>
+                <!-- </div> -->
             </div>
 
 
